--- a/hardware/data/index.html
+++ b/hardware/data/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Bacchus</title>
-    <link rel="stylesheet" href="Authentication.css">
-    <link rel="stylesheet" href="../../Common.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
         <h1>Bacchus</h1>
-        <div id="error-message" style="color: red; display: none;"></div>
+        <div id="error-message"></div>
         <div class="login-box">
             <div class="login-box-header">
                 <p>Connexion</p>
@@ -33,35 +32,15 @@
                     value="Se connecter"
                     id="submit-button"
                 >
+                <input
+                    type="submit"
+                    value="Créer un compte"
+                    id="create-account-button"
+                    style="margin-top: 10px; background-color: #4caf50;"
+                >
             </div>
         </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const emailInput = document.getElementById('email');
-            const passwordInput = document.getElementById('password');
-            const submitButton = document.getElementById('submit-button');
-            const errorMessage = document.getElementById('error-message');
-
-            function isFormOK() {
-                return emailInput.value.trim().length === 0 || passwordInput.value.trim().length === 0;
-            }
-
-            function updateSubmitButton() {
-                submitButton.disabled = isFormOK();
-            }
-
-            emailInput.addEventListener('input', updateSubmitButton);
-            passwordInput.addEventListener('input', updateSubmitButton);
-
-            submitButton.addEventListener('click', function(e) {
-                e.preventDefault();
-                console.log('Login attempt with:', emailInput.value, passwordInput.value);
-                errorMessage.textContent = 'Login functionality not implemented in this HTML version.';
-                errorMessage.style.display = 'block';
-            });
-        });
-    </script>
+    <script src="/script.js"></script>
 </body>
 </html>
